--- a/pages/resources.html
+++ b/pages/resources.html
@@ -1,226 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script type="module" src="../assets/js/resources.js"></script>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Resources • CampusLearn™</title>
 
-    <title>Resources • CampusLearn™</title>
-
-    <!-- Bootstrap & Icons -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet" />
-
-    <!-- Styles -->
-    <link rel="icon" href="assets/images/Favicon.png" type="image/x-icon" />
-
-    <style>
-      body {
-        background-color: #f8fafc;
-        font-family: "Inter", sans-serif;
-      }
-
-      .page-header {
-        background: linear-gradient(90deg, #0044cc, #007bff);
-        color: #fff;
-        padding: 2rem 1rem;
-        border-radius: 0.75rem;
-        text-align: center;
-        margin-bottom: 2rem;
-      }
-
-      .page-header h1 {
-        font-weight: 700;
-        font-size: 2rem;
-      }
-
-      .filter-bar {
-        background: #fff;
-        border-radius: 0.5rem;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
-        padding: 1rem;
-        margin-bottom: 1.5rem;
-      }
-
-      .upload-card {
-        background: #fff;
-        border: none;
-        border-radius: 10px;
-        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
-        transition: 0.3s;
-      }
-
-      .upload-card:hover {
-        transform: translateY(-3px);
-      }
-
-      .resource-card {
-        border: none;
-        border-radius: 10px;
-        box-shadow: 0 1px 6px rgba(0, 0, 0, 0.06);
-        transition: 0.3s;
-      }
-
-      .resource-card:hover {
-        transform: translateY(-5px);
-        box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
-      }
-
-      footer {
-        background: #0044cc;
-        color: #fff;
-      }
-    </style>
-  </head>
-  <script src = "../assets/js/nav.js"></script>
-  <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom sticky-top">
-      <div class="container">
-        <a class="navbar-brand fw-bold" href="../index.html">CampusLearn<span class="text-primary">™</span></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#clNav">
-          <span class="navbar-toggler-icon"></span>
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet" />
+</head>
+<body>
+  <div class="container my-5">
+    <h2 class="mb-4">Upload Learning Resource</h2>
+    <form id="uploadForm" class="row g-3">
+      <div class="col-md-4">
+        <label class="form-label">Module Code</label>
+        <input type="text" id="moduleCode" class="form-control" placeholder="e.g., DB101" required />
+      </div>
+      <div class="col-md-4">
+        <label class="form-label">File Type</label>
+        <select id="fileType" class="form-select" required>
+          <option value="">Select Type</option>
+          <option value="pdf">PDF</option>
+          <option value="video">Video</option>
+          <option value="interactive">Interactive</option>
+        </select>
+      </div>
+      <div class="col-md-4">
+        <label class="form-label">Visibility</label>
+        <select id="visibility" class="form-select" required>
+          <option value="private">Private (Only You)</option>
+          <option value="public">Public (Shareable)</option>
+        </select>
+      </div>
+      <div class="col-md-12">
+        <label class="form-label">Choose File</label>
+        <input type="file" id="fileInput" class="form-control" required />
+      </div>
+      <div class="col-md-12 text-end">
+        <button type="submit" class="btn btn-primary">
+          <i class="fa fa-upload me-2"></i>Upload File
         </button>
-        <div class="collapse navbar-collapse" id="clNav">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item"><a class="nav-link" href="topics.html">Topics</a></li>
-            <li class="nav-item"><a class="nav-link" href="forum.html">Forum</a></li>
-            <li class="nav-item"><a class="nav-link active" href="resources.html">Resources</a></li>
-            <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
-            <li class="nav-item"><a class="nav-link" href="messages.html">Messages</a></li>
-          </ul>
-          <div class="d-flex gap-2">
-            <a href="login.html" class="btn btn-outline-primary btn-sm">Log in</a>
-            <a href="register.html" class="btn btn-primary btn-sm">Register</a>
-          </div>
-        </div>
+        <p id="uploadStatus" class="mt-2"></p>
       </div>
-    </nav>
+    </form>
+  </div>
 
-    <!-- Header -->
-    <header class="page-header">
-      <div class="container">
-        <h1>Learning Resources</h1>
-        <p class="lead">Browse, upload, and share materials to help peers succeed.</p>
-      </div>
-    </header>
-
-    <!-- Main -->
-    <main class="container mb-5">
-      <!-- Filter/Search -->
-      <div class="filter-bar">
-        <div class="row g-3">
-          <div class="col-md-4">
-            <label class="form-label fw-semibold">Search</label>
-            <input class="form-control" placeholder="e.g., normalization, UML" />
-          </div>
-          <div class="col-md-4">
-            <label class="form-label fw-semibold">Module</label>
-            <select class="form-select">
-              <option>All</option>
-              <option>SE202</option>
-              <option>DB101</option>
-              <option>ITM300</option>
-            </select>
-          </div>
-          <div class="col-md-4">
-            <label class="form-label fw-semibold">Type</label>
-            <select class="form-select">
-              <option>All</option>
-              <option>Video</option>
-              <option>PDF</option>
-              <option>Interactive</option>
-            </select>
-          </div>
-        </div>
-      </div>
-
-      <!-- Upload Section -->
-      <section class="mb-5">
-        <div class="card upload-card">
-          <div class="card-body">
-            <h5 class="card-title mb-3 text-primary"><i class="fa fa-upload me-2"></i>Upload New Learning Material</h5>
-            <form id="uploadForm" class="row g-3">
-              <div class="col-md-3">
-                <label class="form-label">Module Code</label>
-                <input type="text" id="moduleCode" class="form-control" placeholder="e.g., DB101" required />
-              </div>
-              <div class="col-md-3">
-                <label class="form-label">Type</label>
-                <select id="fileType" class="form-select" required>
-                  <option value="">Select Type</option>
-                  <option value="pdf">PDF</option>
-                  <option value="video">Video</option>
-                  <option value="interactive">Interactive</option>
-                </select>
-              </div>
-              <div class="col-md-3">
-                <label class="form-label">Visibility</label>
-                <select id="visibility" class="form-select" required>
-                  <option value="private">Private (Only You)</option>
-                  <option value="public">Public (Shareable)</option>
-                </select>
-              </div>
-              <div class="col-md-3">
-                <label class="form-label">Choose File</label>
-                <input type="file" id="fileInput" class="form-control" required />
-              </div>
-              <div class="col-md-12 text-end">
-                <button type="submit" class="btn btn-primary">
-                  <i class="fa fa-upload me-2"></i>Upload File
-                </button>
-                <div id="uploadStatus" class="small mt-2 text-muted"></div>
-              </div>
-            </form>
-          </div>
-        </div>
-      </section>
-
-      <!-- Existing Resources -->
-      <section>
-        <h4 class="mb-3 fw-semibold text-primary">Available Resources</h4>
-        <div class="row g-3">
-          <div class="col-md-4">
-            <div class="card resource-card h-100">
-              <div class="card-body">
-                <h6 class="fw-semibold">Normalization 101</h6>
-                <p class="small text-muted mb-2">DB101 • PDF</p>
-                <a href="#" class="btn btn-outline-primary btn-sm">Open</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card resource-card h-100">
-              <div class="card-body">
-                <h6 class="fw-semibold">Sequence Diagrams Explained</h6>
-                <p class="small text-muted mb-2">SE202 • Video</p>
-                <a href="#" class="btn btn-outline-primary btn-sm">Open</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card resource-card h-100">
-              <div class="card-body">
-                <h6 class="fw-semibold">Agile Estimation Exercise</h6>
-                <p class="small text-muted mb-2">SE202 • Interactive</p>
-                <a href="#" class="btn btn-outline-primary btn-sm">Open</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
-
-    <!-- Footer -->
-    <footer class="mt-5 py-4 text-center">
-      <div class="container small">
-        © 2025 CampusLearn™ – Peer-Powered Learning for Belgium Campus
-      </div>
-      </form>
-    </section>
-  </main>
-
-    <!-- Scripts -->
-    <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> -->
-  </body>
+  <script type="module" src="../assets/js/resources.js"></script>
+</body>
 </html>
