--- a/pages/forum.html
+++ b/pages/forum.html
@@ -29,7 +29,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom">
       <div class="container">
-        <a class="navbar-brand fw-bold" href="../index.html">CampusLearn<span class="text-primary">™</span></a>
+        <a class="navbar-brand fw-bold" href="topics.html">CampusLearn<span class="text-primary">™</span></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#clNav" aria-controls="clNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -43,8 +43,8 @@
             <li class="nav-item"><a class="nav-link" href="/pages/messages.html">Messages</a></li>
           </ul>
           <div class="d-flex gap-2">
-            <a href="/pages/login.html" class="btn btn-outline-primary btn-sm">Log in</a>
-            <a href="/pages/register.html" class="btn btn-primary btn-sm">Register</a>
+            <a href="../index.html" class="btn btn-outline-primary btn-sm">Log out</a>
+            <a href="profile.html" class="btn btn-primary btn-sm">My Profile</a>
           </div>
         </div>
       </div>
@@ -180,6 +180,16 @@
     <script src="../env.js"></script>
     <script src="../assets/js/supabaseClient.js" type="module"></script>
     <script src="../assets/js/ForumPost.js" type="module"></script>
+    <script>
+      // Initialize Supabase
+      import('../assets/js/supabaseClient.js').then(({ supabase }) => {
+        document.querySelector('a[href="../index.html"]').addEventListener('click', async (e) => {
+          e.preventDefault();
+          await supabase.auth.signOut();
+          window.location.href = '../index.html';
+        });
+      });
+    </script>
 
   </body>
 </html>
