--- a/pages/messages.html
+++ b/pages/messages.html
@@ -21,11 +21,12 @@
       }
     </style>
      <script src = "../assets/js/nav.js"></script>
+     <script src="../assets/js/env.js"></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom sticky-top">
       <div class="container">
-        <a class="navbar-brand fw-bold" href="../index.html">CampusLearn<span class="text-primary">™</span></a>
+        <a class="navbar-brand fw-bold" href="topics.html">CampusLearn<span class="text-primary">™</span></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#clNav" aria-controls="clNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -39,7 +40,7 @@
             <li class="nav-item"><a class="nav-link active" href="messages.html">Messages</a></li>
           </ul>
           <div class="d-flex gap-2">
-            <a href="login.html" class="btn btn-outline-primary btn-sm">Log out</a>
+            <a href="../index.html" class="btn btn-outline-primary btn-sm">Log out</a>
             <a href="profile.html" class="btn btn-primary btn-sm">My Profile</a>
           </div>
         </div>
@@ -209,6 +210,16 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/app.js"></script>
+    <script>
+      // Initialize Supabase
+      import('./assets/js/supabaseClient.js').then(({ supabase }) => {
+        document.querySelector('a[href="../index.html"]').addEventListener('click', async (e) => {
+          e.preventDefault();
+          await supabase.auth.signOut();
+          window.location.href = '../index.html';
+        });
+      });
+    </script>
     <script>
       function sendMessage() {
         const messageInput = document.getElementById('messageInput');
