--- a/pages/notifications.html
+++ b/pages/notifications.html
@@ -8,6 +8,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet">
     <link rel="icon" href="/assets/images/Favicon.png" type="image/x-icon">
+    <script src="../assets/js/env.js"></script>
     <style>
       body {
         background-image: url('https://www.transparenttextures.com/patterns/cubes.png'), url('https://img.freepik.com/premium-vector/hand-drawn-set-elements-abstract-arrows-ribbons-hearts-stars-crowns-monsters-other-elements-hand-drawn-style-concept-design-scribble-illustration-vector-illustration_607987-917.jpg');
@@ -24,7 +25,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom sticky-top">
       <div class="container">
-        <a class="navbar-brand fw-bold" href="../index.html">CampusLearn<span class="text-primary">™</span></a>
+        <a class="navbar-brand fw-bold" href="topics.html">CampusLearn<span class="text-primary">™</span></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#clNav" aria-controls="clNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -38,7 +39,7 @@
             <li class="nav-item"><a class="nav-link" href="messages.html">Messages</a></li>
           </ul>
           <div class="d-flex gap-2">
-            <a href="login.html" class="btn btn-outline-primary btn-sm">Log out</a>
+            <a href="../index.html" class="btn btn-outline-primary btn-sm">Log out</a>
             <a href="profile.html" class="btn btn-primary btn-sm">My Profile</a>
           </div>
         </div>
@@ -186,6 +187,16 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/app.js"></script>
+    <script>
+      // Initialize Supabase
+      import('./assets/js/supabaseClient.js').then(({ supabase }) => {
+        document.querySelector('a[href="../index.html"]').addEventListener('click', async (e) => {
+          e.preventDefault();
+          await supabase.auth.signOut();
+          window.location.href = '../index.html';
+        });
+      });
+    </script>
     <script>
       function updateMessageTemplate() {
         const template = document.getElementById('notifTemplate').value;
