--- a/pages/profile.html
+++ b/pages/profile.html
@@ -38,8 +38,8 @@
           <li class="nav-item"><a class="nav-link" href="messages.html">Messages</a></li>
         </ul>
         <div class="d-flex gap-2">
-          <a href="login.html" class="btn btn-outline-primary btn-sm">Login</a>
-          <a href="register.html" class="btn btn-primary btn-sm">Register</a>
+          <a href="../index.html" class="btn btn-outline-primary btn-sm">Log out</a>
+          <a href="profile.html" class="btn btn-primary btn-sm">My Profile</a>
         </div>
       </div>
     </div>
@@ -106,5 +106,15 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="../assets/js/profile.js"></script>
+  <script>
+    // Initialize Supabase
+    import('../assets/js/supabaseClient.js').then(({ supabase }) => {
+      document.querySelector('a[href="../index.html"]').addEventListener('click', async (e) => {
+        e.preventDefault();
+        await supabase.auth.signOut();
+        window.location.href = '../index.html';
+      });
+    });
+  </script>
 </body>
 </html>
