--- a/pages/resources.html
+++ b/pages/resources.html
@@ -24,7 +24,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom sticky-top">
       <div class="container">
-        <a class="navbar-brand fw-bold" href="../index.html">CampusLearn<span class="text-primary">™</span></a>
+        <a class="navbar-brand fw-bold" href="topics.html">CampusLearn<span class="text-primary">™</span></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#clNav" aria-controls="clNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -37,8 +37,8 @@
             <li class="nav-item"><a class="nav-link" href="messages.html">Messages</a></li>
           </ul>
           <div class="d-flex gap-2">
-            <a href="login.html" class="btn btn-outline-primary btn-sm">Log in</a>
-            <a href="register.html" class="btn btn-primary btn-sm">Register</a>
+            <a href="../index.html" class="btn btn-outline-primary btn-sm">Log out</a>
+            <a href="profile.html" class="btn btn-primary btn-sm">My Profile</a>
           </div>
         </div>
       </div>
@@ -102,5 +102,15 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../assets/js/app.js"></script>
     <script type="module" src="../assets/js/resources.js"></script>
+    <script>
+      // Initialize Supabase
+      import('../assets/js/supabaseClient.js').then(({ supabase }) => {
+        document.querySelector('a[href="../index.html"]').addEventListener('click', async (e) => {
+          e.preventDefault();
+          await supabase.auth.signOut();
+          window.location.href = '../index.html';
+        });
+      });
+    </script>
   </body>
 </html>
