--- a/pages/tutor-dashboard.html
+++ b/pages/tutor-dashboard.html
@@ -24,7 +24,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom sticky-top">
       <div class="container">
-        <a class="navbar-brand fw-bold" href="../index.html">CampusLearn<span class="text-primary">™</span></a>
+        <a class="navbar-brand fw-bold" href="topics.html">CampusLearn<span class="text-primary">™</span></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#clNav" aria-controls="clNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
