--- a/pages/admin.html
+++ b/pages/admin.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet">
+    <script src="../scripts/Ai.js"></script>
 
   </head>
   <body>
