--- a/pages/login.html
+++ b/pages/login.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
     <link rel="icon" href="/assets/images/Favicon.png" type="image/x-icon">
+    <script src="../scripts/Ai.js"></script>
     <style>
       body {
         background-image: url('https://www.transparenttextures.com/patterns/cubes.png'),
