--- a/pages/profile.html
+++ b/pages/profile.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="../assets/css/style.css" /> <!-- your site theme -->
   <link href="assets/css/styles.css" rel="stylesheet">
   <link rel="icon" href="/assets/images/Favicon.png" type="image/x-icon">
+  <script src="../scripts/Ai.js"></script>
   <style>
     body {
       background-image: url('https://www.transparenttextures.com/patterns/cubes.png'), url('https://img.freepik.com/premium-vector/hand-drawn-set-elements-abstract-arrows-ribbons-hearts-stars-crowns-monsters-other-elements-hand-drawn-style-concept-design-scribble-illustration-vector-illustration_607987-917.jpg');
