--- a/pages/student-dashboard.html
+++ b/pages/student-dashboard.html
@@ -8,6 +8,7 @@
     <link href="../assets/css/styles.css" rel="stylesheet">
     <link rel="icon" href="../assets/images/Favicon.png" type="image/x-icon">
     <script src = "../assets/js/nav.js"></script>
+    <script src="../scripts/Ai.js"></script>
     <style>
       .sidebar {
         position: sticky;
