--- a/pages/tutor-profile.html
+++ b/pages/tutor-profile.html
@@ -12,6 +12,7 @@
   <link href="../assets/css/styles.css" rel="stylesheet">
   <script src="../env.js"></script>
   <script src="../assets/js/nav.js"></script>
+  <script src="../scripts/Ai.js"></script>
   <style>
     .navbar {
       background-color: #f8f9fa !important;
