--- a/pages/login.html
+++ b/pages/login.html
@@ -174,6 +174,43 @@
     </footer>
 
     <script>
+      import dotenv from 'dotenv';
+      import supabase from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/supabase.min.js';
+      dotenv.config();
+
+      // campuslearn-login-notify.mjs
+      import sgMail from '@sendgrid/mail';
+
+      // Set your SendGrid API key
+      sgMail.setApiKey('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');
+
+      // Function to send login notification
+      async function sendLoginNotification(userEmail, userName) {
+        const msg = {
+          to: userEmail, // recipient
+          from: 'oarabilembewe@gmail.com', // verified sender
+          subject: 'CampusLearn Login Notification',
+          text: `Hello ${userName},\n\nYou have successfully logged in to CampusLearn.\n\nIf this wasn't you, please secure your account immediately.`,
+          html: `
+            <div style="font-family: Arial, sans-serif; color: #333;">
+              <h2 style="color:#007bff;">CampusLearn Login Notification</h2>
+              <p>Hello <strong>${userName}</strong>,</p>
+              <p>You have successfully logged in to <strong>CampusLearn</strong>.</p>
+              <p style="color:red;">If this wasn't you, please secure your account immediately.</p>
+              <hr>
+              <p style="font-size:12px; color:#777;">This is an automated message from CampusLearn. Please do not reply.</p>
+            </div>
+          `,
+        };
+
+        try {
+          await sgMail.send(msg);
+          console.log(`✅ Login notification sent to ${userEmail}`);
+        } catch (err) {
+          console.error('❌ SendGrid error:', err.response?.body || err.message);
+        }
+      }
+
       document.addEventListener('DOMContentLoaded', () => {
         const form = document.getElementById('loginForm');
         if (!form) {
@@ -194,6 +231,7 @@
 
           console.log('Simulating login with:', email);
           localStorage.setItem('currentUser', email);
+              sendLoginNotification(email, email);
           alert('Login successful! Redirecting...');
           window.location.href = 'messages.html';
         });
