--- a/pages/messages.html
+++ b/pages/messages.html
@@ -50,7 +50,7 @@
     <!-- 🌐 Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom sticky-top shadow-sm">
       <div class="container">
-        <a class="navbar-brand fw-bold" href="topics.html">
+        <a class="navbar-brand fw-bold" href="student-dashboard.html">
           CampusLearn<span class="text-primary">™</span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#clNav">
@@ -62,7 +62,7 @@
             <li class="nav-item"><a class="nav-link" href="forum.html">Forum</a></li>
             <li class="nav-item"><a class="nav-link" href="resources.html">Resources</a></li>
             <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
-            <li class="nav-item"><a class="nav-link" href="notifications.html">Notifications</a></li>
+            <!-- <li class="nav-item"><a class="nav-link" href="notifications.html">Notifications</a></li> -->
             <li class="nav-item"><a class="nav-link active" href="messages.html">Messages</a></li>
           </ul>
           <div class="d-flex gap-2">
